--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vuepress/plugin-search": "^2.0.0-beta.25",
     "vuepress": "^2.0.0-beta.25"
   }
 }
