--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "note.goog.tech",
+  "name": "googtech-note",
   "version": "1.0.0",
-  "description": "",
+  "description": "GoogTech — CS Learning Note",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
   },
-  "author": "",
+  "author": "GoogTech",
   "license": "ISC",
   "devDependencies": {
     "@vuepress/plugin-search": "^2.0.0-beta.25",
