--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "googtech-note",
+  "name": "note.goog.tech",
   "version": "1.0.0",
   "description": "GoogTech CS Learning Note",
   "main": "index.js",
